@@ -32,7 +32,8 @@
 from algorithms import (mean_cov, covariance, principal_components, bdist,
                         linear_discriminant, create_training_classes, ndvi,
                         orthogonalize, transform_image, unmix, spectral_angles,
-                        calc_stats, cov_avg, msam)
+                        calc_stats, cov_avg, msam, noise_from_diffs, mnf,
+                        GaussianStats)
 from classifiers import *
 from clustering import L1, L2, kmeans, cluster, isoCluster
 from resampling import BandResampler
