@@ -53,7 +53,8 @@ from . import envi
 from . import spymath
 from . import detectors
 from . import classifiers
+from . import dimensionality
 
 # List of all submodules to be run from the `run` submodule.
 all_tests = [spyfile, memmap, transforms, envi, spymath, detectors,
-             classifiers]
+             classifiers, dimensionality]
